--- a/paper-input-place.html
+++ b/paper-input-place.html
@@ -175,6 +175,9 @@ Google Places Autocomplete attached to paper-input
         this._geocoder = new google.maps.Geocoder();
         this._places = new google.maps.places.Autocomplete(this.$$('#locationsearch').inputElement, {});
         google.maps.event.addListener(this._places, 'place_changed', this._onChangePlace.bind(this));
+        if (this.searchValue != '') {
+          this._svalChanged(this.searchValue, '');
+        }
       },
 
       _valueChanged: function(newValue, oldValue) {
