--- a/paper-input-place.html
+++ b/paper-input-place.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-input/paper-input.html" />
 <link rel="import" href="../google-apis/google-maps-api.html" />
-<link rel="import" href="../iron-icons/iron-icons.html" />
 <link rel="import" href="../iron-icon/iron-icon.html" />
+<link rel="import" href="paper-input-place-icons" />
 
 <!--
 `paper-input-place`
@@ -24,7 +24,7 @@ Google Places Autocomplete attached to paper-input
       <google-maps-api api-key="[[apiKey]]" on-api-load="_mapsApiLoaded"></google-maps-api>
     </template>
   <paper-input id="locationsearch" label="[[label]]" value="{{_value}}" invalid="[[invalid]]" disabled$="[[disabled]]" error-message="Invalid - please select a place">
-    <iron-icon icon="clear" suffix on-tap="_clearLocation"></iron-icon>
+    <iron-icon icon="papinpplc:clear" suffix on-tap="_clearLocation"></iron-icon>
   </paper-input>
   </template>
 
