Use custom icon set

--- a/paper-input-place.html
+++ b/paper-input-place.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../paper-input/paper-input.html" />
 <link rel="import" href="../google-apis/google-maps-api.html" />
 <link rel="import" href="../iron-icon/iron-icon.html" />
-<link rel="import" href="paper-input-place-icons" />
+<link rel="import" href="paper-input-place-icons.html" />
 
 <!--
 `paper-input-place`
