fix issue 37, fails to initialize if api already loaded

--- a/paper-input-place.html
+++ b/paper-input-place.html
@@ -330,7 +330,7 @@ See README.MD for more use examples, styling, api and a link to a live demo page
       ],
 
       ready: function () {
-        var apiElement = this.$$('google-maps-api');
+        var apiElement = this.$$('iron-jsonp-library');
         if (apiElement && apiElement.libraryLoaded) {
           this._mapsApiLoaded();
         }
